<resources>
    <string name="app_name">RecyclerViewExa</string>
    <string name="contact">contact</string>
    <string name="contact_image">Contact Image</string>
    <string name="contact_number">Contact Number</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">Add</string>
</resources>