<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="0dp"
            android:id="@+id/ABCrow"
            android:padding="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/imgContact"
                android:background="#EAFB22"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:contentDescription="@string/contact_image"
                tools:srcCompat="@drawable/contact_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtName"
                    android:text="@string/contact"
                    android:layout_margin="0dp"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNumber"
                    android:fontFamily="sans-serif"
                    android:text="@string/contact_number"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>